--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -3,23 +3,23 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/map"
-        tools:context="com.codepersist.cmpe235lab1.MapsActivity"
+        android:id="@+id/map_container"
+        tools:context="com.codepersist.cmpe235lab1.MapTabActivity"
         android:layout_weight="1"
-        android:name="com.google.android.gms.maps.SupportMapFragment" />
+        />
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:name="com.codepersist.cmpe235lab1.sensordetail"
+        android:name="com.codepersist.cmpe235lab1.sensor_detail"
         android:paddingBottom="5dp"
         android:paddingTop="5dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:textSize="24sp"
-        android:id="@+id/sensordetail"
+        android:id="@+id/sensor_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
