--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,16 +23,23 @@
 
             <LinearLayout android:id="@+id/plus_sign_out_buttons"
                 android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:visibility="gone" android:weightSum="2">
+                android:visibility="gone" android:weightSum="2"
+                android:layout_marginBottom="5dp">
 
                 <Button android:id="@+id/plus_sign_out_button" style="?android:textAppearanceSmall"
                     android:layout_width="match_parent" android:layout_height="match_parent"
-                    android:layout_weight="1" android:text="@string/plus_sign_out" />
+                    android:layout_weight="1" android:text="@string/plus_sign_out"
+                    android:layout_marginRight="1dp"
+                    android:background="#d34836"
+                 />
 
                 <Button android:id="@+id/plus_disconnect_button"
                     style="?android:textAppearanceSmall" android:layout_width="match_parent"
                     android:layout_height="match_parent" android:layout_weight="1"
-                    android:text="@string/plus_disconnect" />
+                    android:text="@string/plus_disconnect"
+                    android:layout_marginLeft="1dp"
+                    android:background="#d34836"
+                 />
 
             </LinearLayout>
 
