--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -8,20 +8,39 @@
         android:layout_height="0dp"
         android:id="@+id/map_container"
         tools:context="com.codepersist.cmpe235lab1.MapTabActivity"
-        android:layout_weight="1"
-        />
+        android:layout_weight="1" />
 
+    <LinearLayout android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        >
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:name="com.codepersist.cmpe235lab1.sensor_detail"
         android:paddingBottom="5dp"
         android:paddingTop="5dp"
-        android:paddingLeft="5dp"
+        android:paddingLeft="10dp"
         android:paddingRight="5dp"
         android:textSize="24sp"
         android:id="@+id/sensor_detail"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         />
+
+    <ImageView
+        android:id="@+id/directions_button"
+        android:contentDescription="Click For Driving Directions"
+        android:layout_weight="2"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:scaleType="centerInside"
+        android:src="@drawable/driving_button_icon"
+        />
+    </LinearLayout>
 
 </LinearLayout>
