--- a/app/src/main/res/layout/card_view_row.xml
+++ b/app/src/main/res/layout/card_view_row.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <ImageView
+        android:id="@+id/driving_button"
         android:layout_marginRight="50dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
