--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -4,12 +4,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.codepersist.cmpe235lab1.ControlActivity">
+    tools:context="com.codepersist.cmpe235lab1.ContactActivity">
 
-    <TextView android:text="@string/sensor_control" android:layout_width="wrap_content"
+    <TextView android:text="@string/sensor_control"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:textSize="24sp" />
+        android:textSize="24sp"/>
 
 </RelativeLayout>
